[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/cards/birth.png" type="Texture" id=2]
[ext_resource path="res://objects/cards/CardDisplay.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 65, 89 )

[node name="Card" type="Node2D"]

[node name="BackgroundGlow" type="ColorRect" parent="."]
modulate = Color( 1, 4, 1, 1 )
margin_left = -4.0
margin_top = -4.0
margin_right = 132.0
margin_bottom = 180.0
mouse_filter = 2
color = Color( 0.392157, 0.85098, 0.278431, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 128.0
margin_bottom = 176.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
margin_left = 5.0
margin_top = 104.0
margin_right = 125.0
margin_bottom = 172.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="ColorRect/MarginContainer"]
margin_right = 120.0
margin_bottom = 68.0
rect_clip_content = false
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Spawn a new Fox"
text = "Spawn a new Fox"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
margin_left = 7.0
margin_top = 4.0
margin_right = 121.0
margin_bottom = 92.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/MarginContainer2"]
position = Vector2( 58, 42 )
scale = Vector2( 0.1875, 0.181701 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 64, 88 )
shape = SubResource( 4 )

[connection signal="mouse_entered" from="Area2D" to="BackgroundGlow" method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="BackgroundGlow" method="_on_Card_mouse_exited"]
